# ChangeLog for app-accessibility/SphinxTrain
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/SphinxTrain/ChangeLog,v 1.8 2005/07/20 21:59:59 eradicator Exp $

  20 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org> +files/gcc34.patch,
  SphinxTrain-0.9.1-r1.ebuild:
  gcc-3.4 and installation fix thanks to laughingplant
  <hsggebhardt@ucdavis.edu> in bug #73586.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  SphinxTrain-0.9.1-r1.ebuild:
  Masked SphinxTrain-0.9.1-r1.ebuild stable for ppc

  24 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  SphinxTrain-0.9.1-r1.ebuild:
  inherit eutils

  17 Mar 2004; David Holm <dholm@gentoo.org> SphinxTrain-0.9.1-r1.ebuild:
  Added to ~ppc.

  16 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  SphinxTrain-0.9.1-r1.ebuild metadata.xml, files/gcc.patch:
  Moved from media-sound/SphinxTrain to app-accessibility/SphinxTrain.

  16 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  SphinxTrain-0.9.1-r1.ebuild, SphinxTrain-0.9.1.ebuild:
  sphinx2 and festival are in app-accessibility now

  16 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  SphinxTrain-0.9.1.ebuild:
  sphinx2 and festival are in app-accessibility now

*SphinxTrain-0.9.1-r1 (28 Sep 2003)

  28 Sep 2003; jje <jje@gentoo.org> SphinxTrain-0.9.1-r1.ebuild,
  files/gcc.patch:
  Patched for gcc3.3. Closes #29461.

  12 Jun 2003; <msterret@gentoo.org> SphinxTrain-0.9.1.ebuild:
  fix Header

*SphinxTrain-0.9.1 (5 Nov 2002)
  
  5 Nov 2002; Matt Keadle <mkeadle@gentoo.org> SphinxTrain-0.9.1.ebuild
  ChangeLog files/digest-SphinxTrain-0.9.1 :

  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. Many, many thanks to Rigo Ketelings for creating this
  ebuild.