@@ -1,11 +1,11 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/SphinxTrain/SphinxTrain-0.9.1-r1.ebuild,v 1.8 2005/07/20 21:59:59 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/SphinxTrain/SphinxTrain-0.9.1-r1.ebuild,v 1.9 2005/10/10 04:42:54 chriswhite Exp $
 
 inherit eutils
 
 DESCRIPTION="Speech Recognition (Training Module)"
-HOMEPAGE="http://www.speech.cs.cmu.edu/SphinxTrain/"
+HOMEPAGE="http://cmusphinx.sourceforge.net/html/cmusphinx.php"
 SRC_URI="http://www.speech.cs.cmu.edu/${PN}/${P}-beta.tar.gz"
 
 LICENSE="BSD as-is"
