@@ -3,4 +3,10 @@
 <pkgmetadata>
 <herd>accessibility</herd>
 <herd>sound</herd>
+<longdescription lang="en">
+	SphinxTrain is CMU Sphinx's training package.
+</longdescription>
+<longdescription lang="ja">
+	SphinxTrainはCMU Sphinxの調教パッケージです。
+</longdescription>
 </pkgmetadata>
