@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/SphinxTrain
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/SphinxTrain/ChangeLog,v 1.8 2005/07/20 21:59:59 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/SphinxTrain/ChangeLog,v 1.9 2005/10/10 04:42:54 chriswhite Exp $
+
+  10 Oct 2005; Chris White <chriswhite@gentoo.org> metadata.xml,
+  SphinxTrain-0.9.1-r1.ebuild:
+  Updated homepage, provided English and Japanese metadata.xml tranlsations.
 
   20 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org> +files/gcc34.patch,
   SphinxTrain-0.9.1-r1.ebuild:
